# DNCP

./: .gitignore  CMakeLists.txt  Directory.Build.props  configure.cmake  dncp.proj  readme.md
.github/workflows/: main.yml
src/: CMakeLists.txt  bstr.c  config.cmake.in  guids.c  interfaces.c  memory.c  strings.c  util.h  windows.c
src/inc/: dncompal.h  dncp.h
src/inc/winhdrs/: CMakeLists.txt  objidl.h  objidlbase.h  ole2.h  poppack.h  pshpack1.h  rpc.h  rpcndr.h  specstrings.h  unknwn.h  winerror.h
tests/: CMakeLists.txt  main.c  main.cpp
tests/scenario/: CMakeLists.txt  comserver.cpp
tests/scenario/ComClient/: BuiltInInterop.cs  ComClient.csproj  ComServerBinary.cs  ComServerTests.cs  ComWrappers.cs  UseComWrappers.cs
tests/scenario/comserver/: CMakeLists.txt  comserver.cpp
tests/unit/: CMakeLists.txt  main.cpp
